Made responsive changes

--- a/contact.html
+++ b/contact.html
@@ -144,7 +144,15 @@
 			content: '';
 			clear: both;
 		}
-		
+		@media screen and (max-width: 760px) {
+			input {
+				width: 40%;
+			}
+		@media screen and (max-width: 480px) {
+			input {
+				width: 20%;
+			}
+		}
 	</style>
 </head>
 <body>
