--- a/shop.html
+++ b/shop.html
@@ -147,8 +147,16 @@
 			visibility: hidden;
 			display: block;
 			content: '';
-			clear: both;
+			
 		}
+		@media screen and (max-width: 760px) {
+			#row {
+				width: 40%;
+			}
+		@media screen and (max-width: 480px) {
+			#row {
+				width: 10%;
+			}
 	</style>
 </head>
 <body>
