--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
 		.image {
 			float:right;
 			height: 260px;
-			margin: 5%;
+			margin: 4%;
 			border-left: 1px solid rgba(0,0,0,0.1);
 		}
 		#text .paragraph {
@@ -105,6 +105,16 @@
 			display: block;
 			content: '';
 			clear: both;
+		}
+		@media screen and (max-width: 760px) {
+			.image {
+				margin: auto;
+			}
+		}
+		@media screen and (max-width: 400px) {
+			.image {
+				margin: auto;
+			}
 		}
 	</style>
 </head>
