--- a/index.html
+++ b/index.html
@@ -163,6 +163,27 @@
 			content: '';
 			clear: both;
 		}
+		@media screen and (max-width: 760px) {
+			input {
+				width: 40%;
+			}
+			h2 {
+				display: none;
+			}
+		@media screen and (max-width: 400px) {
+			#section-2, 
+			#border {
+				visibility: hidden;
+			}
+			h2 {
+				display: none;
+			}
+			nav > ul {
+			list-style-type: none;
+			margin: 0;
+			padding: 0;
+			overflow: hidden;
+		}
 	</style>
 </head>
 <body>
